some navbar/spacing issues still

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
   box-sizing: border-box;
 }
 
-/* general */
+/*general */
 
 .container {
   width: 100%;
@@ -65,7 +65,7 @@ h3 {
 
 #logo {
   float: left;
-  width: 250px;
+  /*width: 250px;*/
   height: 90px;
   font-family: Georgia, Times, "Times New Roman", serif;
   font-size: 30px;
@@ -192,7 +192,6 @@ h3,
 
 .auth-image {
   float: left;
-  width: 200px;
   height: auto;
   margin-top: 10px;
   margin-right: 25px;
@@ -237,3 +236,4 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+ 
